[tool.poetry]
name = "youtoo"
version = "0.1.0"
description = ""
authors = ["Will <williamwsantosa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytube = "^12.1.0"
PyQt6 = "^6.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
